WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
91553
IndexedDB: createIndex should throw INVALID_ACCESS_ERR instead of NOT_SUPPORTED_ERR
https://bugs.webkit.org/show_bug.cgi?id=91553
Summary
IndexedDB: createIndex should throw INVALID_ACCESS_ERR instead of NOT_SUPPORT...
Alec Flett
Reported
2012-07-17 16:16:57 PDT
IndexedDB: createIndex should throw INVALID_ACCESS_ERR instead of NOT_SUPPORTED_ERR
Attachments
Patch
(5.96 KB, patch)
2012-07-17 16:23 PDT
,
Alec Flett
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alec Flett
Comment 1
2012-07-17 16:23:36 PDT
Created
attachment 152866
[details]
Patch
Alec Flett
Comment 2
2012-07-17 16:24:17 PDT
jsbell/dgrogan - easy one - quick look?
Alec Flett
Comment 3
2012-07-17 16:24:34 PDT
(spec was updated yesterday)
Joshua Bell
Comment 4
2012-07-17 16:27:57 PDT
Comment on
attachment 152866
[details]
Patch lgtm
Alec Flett
Comment 5
2012-07-17 16:30:02 PDT
tony@ - incredibly simple. r?
WebKit Review Bot
Comment 6
2012-07-17 17:35:37 PDT
Comment on
attachment 152866
[details]
Patch Clearing flags on attachment: 152866 Committed
r122905
: <
http://trac.webkit.org/changeset/122905
>
WebKit Review Bot
Comment 7
2012-07-17 17:35:41 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug