IndexedDB: createIndex should throw INVALID_ACCESS_ERR instead of NOT_SUPPORTED_ERR https://bugs.webkit.org/show_bug.cgi?id=91553

Patch by Alec Flett <alecflett@chromium.org> on 2012-07-17
Reviewed by Tony Chang.

Source/WebCore:

Update createIndex to throw an INVALID_ACCESS_ERR
as per the IndexedDB spec.

No new tests: existing tests have been updated

* Modules/indexeddb/IDBDatabaseException.cpp:
(WebCore):
* Modules/indexeddb/IDBDatabaseException.h:
* Modules/indexeddb/IDBObjectStore.cpp:
(WebCore::IDBObjectStore::createIndex):

LayoutTests:

Update to match IndexedDB spec.

* storage/indexeddb/keypath-arrays-expected.txt:
* storage/indexeddb/resources/keypath-arrays.js:
(openSuccess.request.onsuccess):
(openSuccess):

Canonical link: https://commits.webkit.org/109364@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122905 268f45cc-cd09-0410-ab3c-d52691b4dbfc